// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`kol-select should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _accessKey="V" 1`] = `
<kol-select _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <div class="has-value kol-input kol-select msg-type-error select" role="presentation">
      <label class="input-label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          Label
          <span aria-hidden="true" class="access-key-hint">
            V
          </span>
        </span>
      </label>
      <div class="input" style="position: relative;">
        <form class="input-slot">
          <input hidden="" type="submit">
          <select accesskey="V" autocapitalize="off" autocorrect="off" id="id-nonce" name="field">
            <option disabled="" selected="" value="-0">
              Frau
            </option>
            <option value="-1">
              Herr
            </option>
            <option value="-2">
              Divers
            </option>
          </select>
        </form>
      </div>
    </div>
  </template>
</kol-select>
`;

exports[`kol-select should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _alert=true 1`] = `
<kol-select _alert="" _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <div class="has-value kol-input kol-select msg-type-error select" role="presentation">
      <label class="input-label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="input" style="position: relative;">
        <form class="input-slot">
          <input hidden="" type="submit">
          <select autocapitalize="off" autocorrect="off" id="id-nonce" name="field">
            <option disabled="" selected="" value="-0">
              Frau
            </option>
            <option value="-1">
              Herr
            </option>
            <option value="-2">
              Divers
            </option>
          </select>
        </form>
      </div>
    </div>
  </template>
</kol-select>
`;

exports[`kol-select should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _disabled=true 1`] = `
<kol-select _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <div class="disabled has-value kol-input kol-select msg-type-error select" role="presentation">
      <label class="input-label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="input" style="position: relative;">
        <form class="input-slot">
          <input hidden="" type="submit">
          <select autocapitalize="off" autocorrect="off" disabled="" id="id-nonce" name="field">
            <option disabled="" selected="" value="-0">
              Frau
            </option>
            <option value="-1">
              Herr
            </option>
            <option value="-2">
              Divers
            </option>
          </select>
        </form>
      </div>
    </div>
  </template>
</kol-select>
`;

exports[`kol-select should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _hint="Hint" 1`] = `
<kol-select _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <div class="has-value kol-input kol-select msg-type-error select" role="presentation">
      <label class="input-label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          <span>
            Label
          </span>
        </span>
      </label>
      <span class="hint" id="id-nonce-hint">
        Hint
      </span>
      <div class="input" style="position: relative;">
        <form class="input-slot">
          <input hidden="" type="submit">
          <select aria-describedby="id-nonce-hint" autocapitalize="off" autocorrect="off" id="id-nonce" name="field">
            <option disabled="" selected="" value="-0">
              Frau
            </option>
            <option value="-1">
              Herr
            </option>
            <option value="-2">
              Divers
            </option>
          </select>
        </form>
      </div>
    </div>
  </template>
</kol-select>
`;

exports[`kol-select should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _icons={"left":{"icon":"codicon codicon-arrow-left"},"right":{"icon":"codicon codicon-arrow-right"}} 1`] = `
<kol-select _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <div class="has-value kol-input kol-select msg-type-error select" role="presentation">
      <label class="input-label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="icon-left icon-right input" style="position: relative;">
        <kol-icon _icons="codicon codicon-codicon codicon-arrow-left" _label="" _tabindex="-1"></kol-icon>
        <form class="input-slot">
          <input hidden="" type="submit">
          <select autocapitalize="off" autocorrect="off" id="id-nonce" name="field">
            <option disabled="" selected="" value="-0">
              Frau
            </option>
            <option value="-1">
              Herr
            </option>
            <option value="-2">
              Divers
            </option>
          </select>
        </form>
        <kol-icon _icons="codicon codicon-codicon codicon-arrow-right" _label="" _tabindex="-1"></kol-icon>
      </div>
    </div>
  </template>
</kol-select>
`;

exports[`kol-select should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _icons={"left":{"icon":"codicon codicon-arrow-left"}} 1`] = `
<kol-select _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <div class="has-value kol-input kol-select msg-type-error select" role="presentation">
      <label class="input-label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="icon-left input" style="position: relative;">
        <kol-icon _icons="codicon codicon-codicon codicon-arrow-left" _label="" _tabindex="-1"></kol-icon>
        <form class="input-slot">
          <input hidden="" type="submit">
          <select autocapitalize="off" autocorrect="off" id="id-nonce" name="field">
            <option disabled="" selected="" value="-0">
              Frau
            </option>
            <option value="-1">
              Herr
            </option>
            <option value="-2">
              Divers
            </option>
          </select>
        </form>
      </div>
    </div>
  </template>
</kol-select>
`;

exports[`kol-select should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _icons={"right":{"icon":"codicon codicon-arrow-right"}} 1`] = `
<kol-select _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <div class="has-value kol-input kol-select msg-type-error select" role="presentation">
      <label class="input-label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="icon-right input" style="position: relative;">
        <form class="input-slot">
          <input hidden="" type="submit">
          <select autocapitalize="off" autocorrect="off" id="id-nonce" name="field">
            <option disabled="" selected="" value="-0">
              Frau
            </option>
            <option value="-1">
              Herr
            </option>
            <option value="-2">
              Divers
            </option>
          </select>
        </form>
        <kol-icon _icons="codicon codicon-codicon codicon-arrow-right" _label="" _tabindex="-1"></kol-icon>
      </div>
    </div>
  </template>
</kol-select>
`;

exports[`kol-select should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _msg={"_type":"error","_description":"Es ist ein Fehler aufgetreten"} _hideError=true 1`] = `
<kol-select _hide-error="" _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <div class="has-value hidden-error kol-input kol-select msg-type-error select" role="presentation">
      <label class="input-label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="input" style="position: relative;">
        <form class="input-slot">
          <input hidden="" type="submit">
          <select autocapitalize="off" autocorrect="off" id="id-nonce" name="field">
            <option disabled="" selected="" value="-0">
              Frau
            </option>
            <option value="-1">
              Herr
            </option>
            <option value="-2">
              Divers
            </option>
          </select>
        </form>
      </div>
    </div>
  </template>
</kol-select>
`;

exports[`kol-select should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _msg={"_type":"error","_description":"Es ist ein Fehler aufgetreten"} 1`] = `
<kol-select _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <div class="has-value kol-input kol-select msg-type-error select" role="presentation">
      <label class="input-label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="input" style="position: relative;">
        <form class="input-slot">
          <input hidden="" type="submit">
          <select autocapitalize="off" autocorrect="off" id="id-nonce" name="field">
            <option disabled="" selected="" value="-0">
              Frau
            </option>
            <option value="-1">
              Herr
            </option>
            <option value="-2">
              Divers
            </option>
          </select>
        </form>
      </div>
    </div>
  </template>
</kol-select>
`;

exports[`kol-select should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _multiple=true _accessKey="V" 1`] = `
<kol-select _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <div class="has-value kol-input kol-select msg-type-error select" role="presentation">
      <label class="input-label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          Label
          <span aria-hidden="true" class="access-key-hint">
            V
          </span>
        </span>
      </label>
      <div class="input" style="position: relative;">
        <form class="input-slot">
          <input hidden="" type="submit">
          <select accesskey="V" autocapitalize="off" autocorrect="off" id="id-nonce" multiple="" name="field">
            <option disabled="" value="-0">
              Frau
            </option>
            <option value="-1">
              Herr
            </option>
            <option value="-2">
              Divers
            </option>
          </select>
        </form>
      </div>
    </div>
  </template>
</kol-select>
`;

exports[`kol-select should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _multiple=true _alert=true 1`] = `
<kol-select _alert="" _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <div class="has-value kol-input kol-select msg-type-error select" role="presentation">
      <label class="input-label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="input" style="position: relative;">
        <form class="input-slot">
          <input hidden="" type="submit">
          <select autocapitalize="off" autocorrect="off" id="id-nonce" multiple="" name="field">
            <option disabled="" value="-0">
              Frau
            </option>
            <option value="-1">
              Herr
            </option>
            <option value="-2">
              Divers
            </option>
          </select>
        </form>
      </div>
    </div>
  </template>
</kol-select>
`;

exports[`kol-select should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _multiple=true _disabled=true 1`] = `
<kol-select _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <div class="disabled has-value kol-input kol-select msg-type-error select" role="presentation">
      <label class="input-label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="input" style="position: relative;">
        <form class="input-slot">
          <input hidden="" type="submit">
          <select autocapitalize="off" autocorrect="off" disabled="" id="id-nonce" multiple="" name="field">
            <option disabled="" value="-0">
              Frau
            </option>
            <option value="-1">
              Herr
            </option>
            <option value="-2">
              Divers
            </option>
          </select>
        </form>
      </div>
    </div>
  </template>
</kol-select>
`;

exports[`kol-select should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _multiple=true _hint="Hint" 1`] = `
<kol-select _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <div class="has-value kol-input kol-select msg-type-error select" role="presentation">
      <label class="input-label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          <span>
            Label
          </span>
        </span>
      </label>
      <span class="hint" id="id-nonce-hint">
        Hint
      </span>
      <div class="input" style="position: relative;">
        <form class="input-slot">
          <input hidden="" type="submit">
          <select aria-describedby="id-nonce-hint" autocapitalize="off" autocorrect="off" id="id-nonce" multiple="" name="field">
            <option disabled="" value="-0">
              Frau
            </option>
            <option value="-1">
              Herr
            </option>
            <option value="-2">
              Divers
            </option>
          </select>
        </form>
      </div>
    </div>
  </template>
</kol-select>
`;

exports[`kol-select should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _multiple=true _icons={"left":{"icon":"codicon codicon-arrow-left"},"right":{"icon":"codicon codicon-arrow-right"}} 1`] = `
<kol-select _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <div class="has-value kol-input kol-select msg-type-error select" role="presentation">
      <label class="input-label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="icon-left icon-right input" style="position: relative;">
        <kol-icon _icons="codicon codicon-codicon codicon-arrow-left" _label="" _tabindex="-1"></kol-icon>
        <form class="input-slot">
          <input hidden="" type="submit">
          <select autocapitalize="off" autocorrect="off" id="id-nonce" multiple="" name="field">
            <option disabled="" value="-0">
              Frau
            </option>
            <option value="-1">
              Herr
            </option>
            <option value="-2">
              Divers
            </option>
          </select>
        </form>
        <kol-icon _icons="codicon codicon-codicon codicon-arrow-right" _label="" _tabindex="-1"></kol-icon>
      </div>
    </div>
  </template>
</kol-select>
`;

exports[`kol-select should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _multiple=true _icons={"left":{"icon":"codicon codicon-arrow-left"}} 1`] = `
<kol-select _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <div class="has-value kol-input kol-select msg-type-error select" role="presentation">
      <label class="input-label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="icon-left input" style="position: relative;">
        <kol-icon _icons="codicon codicon-codicon codicon-arrow-left" _label="" _tabindex="-1"></kol-icon>
        <form class="input-slot">
          <input hidden="" type="submit">
          <select autocapitalize="off" autocorrect="off" id="id-nonce" multiple="" name="field">
            <option disabled="" value="-0">
              Frau
            </option>
            <option value="-1">
              Herr
            </option>
            <option value="-2">
              Divers
            </option>
          </select>
        </form>
      </div>
    </div>
  </template>
</kol-select>
`;

exports[`kol-select should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _multiple=true _icons={"right":{"icon":"codicon codicon-arrow-right"}} 1`] = `
<kol-select _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <div class="has-value kol-input kol-select msg-type-error select" role="presentation">
      <label class="input-label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="icon-right input" style="position: relative;">
        <form class="input-slot">
          <input hidden="" type="submit">
          <select autocapitalize="off" autocorrect="off" id="id-nonce" multiple="" name="field">
            <option disabled="" value="-0">
              Frau
            </option>
            <option value="-1">
              Herr
            </option>
            <option value="-2">
              Divers
            </option>
          </select>
        </form>
        <kol-icon _icons="codicon codicon-codicon codicon-arrow-right" _label="" _tabindex="-1"></kol-icon>
      </div>
    </div>
  </template>
</kol-select>
`;

exports[`kol-select should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _multiple=true _msg={"_type":"error","_description":"Es ist ein Fehler aufgetreten"} _hideError=true 1`] = `
<kol-select _hide-error="" _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <div class="has-value hidden-error kol-input kol-select msg-type-error select" role="presentation">
      <label class="input-label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="input" style="position: relative;">
        <form class="input-slot">
          <input hidden="" type="submit">
          <select autocapitalize="off" autocorrect="off" id="id-nonce" multiple="" name="field">
            <option disabled="" value="-0">
              Frau
            </option>
            <option value="-1">
              Herr
            </option>
            <option value="-2">
              Divers
            </option>
          </select>
        </form>
      </div>
    </div>
  </template>
</kol-select>
`;

exports[`kol-select should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _multiple=true _msg={"_type":"error","_description":"Es ist ein Fehler aufgetreten"} 1`] = `
<kol-select _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <div class="has-value kol-input kol-select msg-type-error select" role="presentation">
      <label class="input-label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="input" style="position: relative;">
        <form class="input-slot">
          <input hidden="" type="submit">
          <select autocapitalize="off" autocorrect="off" id="id-nonce" multiple="" name="field">
            <option disabled="" value="-0">
              Frau
            </option>
            <option value="-1">
              Herr
            </option>
            <option value="-2">
              Divers
            </option>
          </select>
        </form>
      </div>
    </div>
  </template>
</kol-select>
`;

exports[`kol-select should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _multiple=true _readOnly=true 1`] = `
<kol-select _placeholder="Hier steht ein Platzhaltertext" _readonly="">
  <template shadowrootmode="open">
    <div class="has-value kol-input kol-select msg-type-error select" role="presentation">
      <label class="input-label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="input" style="position: relative;">
        <form class="input-slot">
          <input hidden="" type="submit">
          <select autocapitalize="off" autocorrect="off" id="id-nonce" multiple="" name="field">
            <option disabled="" value="-0">
              Frau
            </option>
            <option value="-1">
              Herr
            </option>
            <option value="-2">
              Divers
            </option>
          </select>
        </form>
      </div>
    </div>
  </template>
</kol-select>
`;

exports[`kol-select should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _multiple=true _shortKey="S" 1`] = `
<kol-select _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <div class="has-value kol-input kol-select msg-type-error select" role="presentation">
      <label class="input-label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          Label
          <span aria-hidden="true" class="access-key-hint">
            S
          </span>
        </span>
      </label>
      <div class="input" style="position: relative;">
        <form class="input-slot">
          <input hidden="" type="submit">
          <select autocapitalize="off" autocorrect="off" id="id-nonce" multiple="" name="field">
            <option disabled="" value="-0">
              Frau
            </option>
            <option value="-1">
              Herr
            </option>
            <option value="-2">
              Divers
            </option>
          </select>
        </form>
      </div>
    </div>
  </template>
</kol-select>
`;

exports[`kol-select should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _multiple=true _touched=true 1`] = `
<kol-select _placeholder="Hier steht ein Platzhaltertext" _touched="">
  <template shadowrootmode="open">
    <div class="has-value kol-input kol-select msg-type-error select touched" role="presentation">
      <label class="input-label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="input" style="position: relative;">
        <form class="input-slot">
          <input hidden="" type="submit">
          <select autocapitalize="off" autocorrect="off" id="id-nonce" multiple="" name="field">
            <option disabled="" value="-0">
              Frau
            </option>
            <option value="-1">
              Herr
            </option>
            <option value="-2">
              Divers
            </option>
          </select>
        </form>
      </div>
    </div>
  </template>
</kol-select>
`;

exports[`kol-select should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _multiple=true 1`] = `
<kol-select _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <div class="has-value kol-input kol-select msg-type-error select" role="presentation">
      <label class="input-label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="input" style="position: relative;">
        <form class="input-slot">
          <input hidden="" type="submit">
          <select autocapitalize="off" autocorrect="off" id="id-nonce" multiple="" name="field">
            <option disabled="" value="-0">
              Frau
            </option>
            <option value="-1">
              Herr
            </option>
            <option value="-2">
              Divers
            </option>
          </select>
        </form>
      </div>
    </div>
  </template>
</kol-select>
`;

exports[`kol-select should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _readOnly=true 1`] = `
<kol-select _placeholder="Hier steht ein Platzhaltertext" _readonly="">
  <template shadowrootmode="open">
    <div class="has-value kol-input kol-select msg-type-error select" role="presentation">
      <label class="input-label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="input" style="position: relative;">
        <form class="input-slot">
          <input hidden="" type="submit">
          <select autocapitalize="off" autocorrect="off" id="id-nonce" name="field">
            <option disabled="" selected="" value="-0">
              Frau
            </option>
            <option value="-1">
              Herr
            </option>
            <option value="-2">
              Divers
            </option>
          </select>
        </form>
      </div>
    </div>
  </template>
</kol-select>
`;

exports[`kol-select should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _shortKey="S" 1`] = `
<kol-select _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <div class="has-value kol-input kol-select msg-type-error select" role="presentation">
      <label class="input-label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          Label
          <span aria-hidden="true" class="access-key-hint">
            S
          </span>
        </span>
      </label>
      <div class="input" style="position: relative;">
        <form class="input-slot">
          <input hidden="" type="submit">
          <select autocapitalize="off" autocorrect="off" id="id-nonce" name="field">
            <option disabled="" selected="" value="-0">
              Frau
            </option>
            <option value="-1">
              Herr
            </option>
            <option value="-2">
              Divers
            </option>
          </select>
        </form>
      </div>
    </div>
  </template>
</kol-select>
`;

exports[`kol-select should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _touched=true 1`] = `
<kol-select _placeholder="Hier steht ein Platzhaltertext" _touched="">
  <template shadowrootmode="open">
    <div class="has-value kol-input kol-select msg-type-error select touched" role="presentation">
      <label class="input-label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="input" style="position: relative;">
        <form class="input-slot">
          <input hidden="" type="submit">
          <select autocapitalize="off" autocorrect="off" id="id-nonce" name="field">
            <option disabled="" selected="" value="-0">
              Frau
            </option>
            <option value="-1">
              Herr
            </option>
            <option value="-2">
              Divers
            </option>
          </select>
        </form>
      </div>
    </div>
  </template>
</kol-select>
`;

exports[`kol-select should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] 1`] = `
<kol-select _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <div class="has-value kol-input kol-select msg-type-error select" role="presentation">
      <label class="input-label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="input" style="position: relative;">
        <form class="input-slot">
          <input hidden="" type="submit">
          <select autocapitalize="off" autocorrect="off" id="id-nonce" name="field">
            <option disabled="" selected="" value="-0">
              Frau
            </option>
            <option value="-1">
              Herr
            </option>
            <option value="-2">
              Divers
            </option>
          </select>
        </form>
      </div>
    </div>
  </template>
</kol-select>
`;
